--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         
         <div class="image">
          
-          <img src="https://raw.githubusercontent.com/ВАШ_ЛОГИН/НАЗВАНИЕ_РЕПОЗИТОРИЯ/ВЕТКА/flat-image.png&quot; alt="Иллюстрация Flat Design">
+          <img src="https://raw.githubusercontent.com/thdsop/flat/main/teapot.png&quot; alt="Иллюстрация Flat Design">
         </div>
       </div>
     </div>
