--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         
         <div class="image">
          
-          <img src="https://raw.githubusercontent.com/thdsop/flat/main/teapot.png&quot; alt="Иллюстрация Flat Design">
+          <img src="https://png.pngtree.com/png-clipart/20230927/original/pngtree-beautiful-happy-pug-png-image_13148201.png">
         </div>
       </div>
     </div>
