--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <div class="content">
       <div class="container">
         <div class="info">
-          <h1>Flat Design: современный минимализм</h1>
-          <p>Плоский дизайн (Flat Design) — это современный подход в веб-дизайне, характеризующийся минимализмом, простотой и отказом от трехмерных эффектов. Этот стиль использует чистые цвета, простые формы и типографику для создания интуитивно понятных интерфейсов. Flat Design фокусируется на удобстве пользователя, быстрой загрузке страниц и адаптивности для различных устройств.</p>
+          <h1>Собаки даром: найди своего любимчика</h1>
+          <p>Собаки — это удивительные создания, в которых гармонично сочетаются безграничное обаяние и невероятная преданность. Их мокрые носы, виляющие хвосты и искренний взгляд способны растопить сердце в любой, даже самый хмурый день.</p>
           <button><a href="https://konoplevdesign3.blogspot.com/p/simple-flat-page.html&quot; target="_blank">Подробнее</a></button>
         </div>
         
